# astinus

./: Bundle.toml  Cargo.toml  README.md
resources/: Astinus.icns
src/: formats.rs  main.glade  main.rs  spreadsheet.rs  ui.rs
